1.0.6-SNAPSHOT
==============
* New dependency on velocity 1.6.2, removed velocity-tools

1.0.5
=====
* Code cleanup
* Added Wrapper for enabling logging to java util.logging

1.0.4
=====
* Moved commons logging to Java core logging.